[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/buttons-blue.tres" type="Theme" id=1]
[ext_resource path="res://assets/themes/Settings-panel.tres" type="Theme" id=2]
[ext_resource path="res://assets/images/icons/modes-buttons/play.svg" type="Texture" id=3]
[ext_resource path="res://objects/ExtraStage/ExtraStage.gd" type="Script" id=4]

[node name="ExtraStage" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 15
custom_constants/margin_top = 15
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 412.0
margin_bottom = 215.0
theme = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 412.0
margin_bottom = 215.0

[node name="DataMargin" type="MarginContainer" parent="HBoxContainer"]
margin_right = 93.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/DataMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 73.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="StageName" type="Label" parent="HBoxContainer/DataMargin/VBoxContainer"]
margin_right = 53.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Extremo"
valign = 1

[node name="StageCode" type="Label" parent="HBoxContainer/DataMargin/VBoxContainer"]
modulate = Color( 0.737255, 0.737255, 0.737255, 1 )
margin_top = 82.0
margin_right = 53.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Hola"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 97.0
margin_right = 397.0
margin_bottom = 200.0
rect_min_size = Vector2( 300, 200 )
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Button" type="Button" parent="HBoxContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 280.0
margin_bottom = 180.0
theme = ExtResource( 1 )
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[connection signal="focus_entered" from="HBoxContainer/MarginContainer/Button" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/Button" to="." method="_on_Button_pressed"]
